--- a/Museek/InterfaceBuilder/EmailSignUp.xib
+++ b/Museek/InterfaceBuilder/EmailSignUp.xib
@@ -10,7 +10,14 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="EmailSignUp" customModule="Museek" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="EmailSignUp" customModule="Museek" customModuleProvider="target">
+            <connections>
+                <outlet property="confirmPasswordTextField" destination="dSU-1e-v55" id="aCM-oM-mli"/>
+                <outlet property="createButton" destination="G3L-ko-M4a" id="5VQ-RY-y1I"/>
+                <outlet property="emailTextField" destination="qaG-E7-Eir" id="4oZ-wd-wyX"/>
+                <outlet property="passwordTextField" destination="iS8-fx-8AU" id="hoC-Oa-3vd"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
