--- a/Museek/InterfaceBuilder/Main.storyboard
+++ b/Museek/InterfaceBuilder/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="1fa-Ca-AVo">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="5JD-HL-gwa">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -9,114 +9,55 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Explore-->
-        <scene sceneID="PCi-FW-tcj">
+        <!--Item 2-->
+        <scene sceneID="Psj-62-PjA">
             <objects>
-                <viewController id="KmB-IV-wa9" userLabel="Explore" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Z4d-mO-XBn">
+                <viewController id="rnV-4P-MSy" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="vIw-Ea-peZ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y6c-yd-e0q">
-                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
-                                <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wvd-Hl-hRP">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="598"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    </view>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstItem="wvd-Hl-hRP" firstAttribute="centerY" secondItem="y6c-yd-e0q" secondAttribute="centerY" id="1aa-Fr-FOI"/>
-                                    <constraint firstAttribute="trailing" secondItem="wvd-Hl-hRP" secondAttribute="trailing" id="X6P-bd-oiU"/>
-                                    <constraint firstItem="wvd-Hl-hRP" firstAttribute="top" secondItem="y6c-yd-e0q" secondAttribute="top" id="eZ2-84-UXX"/>
-                                    <constraint firstItem="wvd-Hl-hRP" firstAttribute="leading" secondItem="y6c-yd-e0q" secondAttribute="leading" id="umr-ea-J4h"/>
-                                    <constraint firstAttribute="bottom" secondItem="wvd-Hl-hRP" secondAttribute="bottom" id="vPZ-He-YMB"/>
-                                </constraints>
-                            </scrollView>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="y6c-yd-e0q" firstAttribute="bottom" secondItem="PrI-ny-ilM" secondAttribute="bottom" id="4RB-eu-fiz"/>
-                            <constraint firstItem="y6c-yd-e0q" firstAttribute="leading" secondItem="PrI-ny-ilM" secondAttribute="leading" id="DEf-9B-JKu"/>
-                            <constraint firstItem="y6c-yd-e0q" firstAttribute="trailing" secondItem="PrI-ny-ilM" secondAttribute="trailing" id="J2u-T1-Gb0"/>
-                            <constraint firstItem="y6c-yd-e0q" firstAttribute="top" secondItem="PrI-ny-ilM" secondAttribute="top" id="be9-90-Wll"/>
-                            <constraint firstItem="wvd-Hl-hRP" firstAttribute="width" secondItem="Z4d-mO-XBn" secondAttribute="width" id="iUO-iN-PnP"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="PrI-ny-ilM"/>
+                        <viewLayoutGuide key="safeArea" id="zk2-dc-pog"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Explore" id="xEl-Hk-7Jy" userLabel="Explore"/>
+                    <tabBarItem key="tabBarItem" title="Item 2" id="EmO-XK-HUQ"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="pLZ-nr-m3s" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oef-v5-cqs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-796" y="984.55772113943033"/>
+            <point key="canvasLocation" x="-73" y="97"/>
         </scene>
-        <!--Profile-->
-        <scene sceneID="7Df-EN-bE0">
+        <!--FeedVC-->
+        <scene sceneID="hI2-A1-os6">
             <objects>
-                <viewController id="ZdQ-SK-F6n" userLabel="Profile" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="g74-Wh-vIk">
+                <viewController title="FeedVC" id="5JD-HL-gwa" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="h2q-yf-gdA">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <viewLayoutGuide key="safeArea" id="VQL-Vz-VbQ"/>
+                        <viewLayoutGuide key="safeArea" id="BJe-Gb-8to"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Profile" id="Opx-wi-Sll"/>
+                    <tabBarItem key="tabBarItem" title="Item 1" id="Co5-fg-7lV"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="8Ri-9r-pfL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="W8r-aN-1w8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="766" y="985"/>
-        </scene>
-        <!--Feed-->
-        <scene sceneID="kmB-jd-o2u">
-            <objects>
-                <viewController id="CBb-SE-XOO" userLabel="Feed" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="cw5-KZ-6u4">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <viewLayoutGuide key="safeArea" id="Wx2-Uo-zkY"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Feed" id="RL3-tr-1gc"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="2nZ-18-R6L" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-1604" y="985"/>
-        </scene>
-        <!--Notifications-->
-        <scene sceneID="yoU-wk-c8J">
-            <objects>
-                <viewController title="Notifications" id="G1E-Yz-rNH" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="H0f-TM-Nd5">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <viewLayoutGuide key="safeArea" id="ZSd-lA-oBM"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Notifications" id="7iK-Yd-4by"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="MQ0-xl-bm3" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="79" y="985"/>
+            <point key="canvasLocation" x="-73" y="-569"/>
         </scene>
         <!--Tab Bar Controller-->
-        <scene sceneID="Aow-gD-PZk">
+        <scene sceneID="FiS-Mo-uWc">
             <objects>
-                <tabBarController id="1fa-Ca-AVo" sceneMemberID="viewController">
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="SBf-dF-vd5">
+                <tabBarController id="N1r-n3-7a5" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="iHr-PA-fSW">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="CBb-SE-XOO" kind="relationship" relationship="viewControllers" id="Fvw-mm-i8k"/>
-                        <segue destination="KmB-IV-wa9" kind="relationship" relationship="viewControllers" id="G9x-Tb-jOP"/>
-                        <segue destination="G1E-Yz-rNH" kind="relationship" relationship="viewControllers" id="9t4-s9-fXT"/>
-                        <segue destination="ZdQ-SK-F6n" kind="relationship" relationship="viewControllers" id="RXR-cg-hj1"/>
+                        <segue destination="5JD-HL-gwa" kind="relationship" relationship="viewControllers" id="GhH-Ox-sXl"/>
+                        <segue destination="rnV-4P-MSy" kind="relationship" relationship="viewControllers" id="cmK-Qa-Mla"/>
                     </connections>
                 </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="YWz-0R-IAe" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BT7-nc-Evh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-486" y="-32"/>
+            <point key="canvasLocation" x="-1025" y="-237"/>
         </scene>
     </scenes>
 </document>
